# firmable_test

./: .env.example  .gitignore  Makefile  README.md  download_dataset.sh  pyproject.toml  requirements.txt  skills-lock.json
.github/prompts/: plan-firmableSearchSystem-latest.prompt.md  plan-firmableSearchSystem.prompt.md  plan-firmableSearchSystemRefined.prompt.md
aidlc-docs/: aidlc-state.md  audit.md
app/: logging_config.py  settings.py
app/agent/: search_agent.py  tools.py
app/api/: main.py  schemas.py
app/ingestion/: config.py  identity.py  normalize.py  normalizers.py  seed.py  stage.py  sync.py
app/models/: __init__.py  company.py  tags.py
app/search/: index_template.json  query_planner.py  service.py  synonyms.txt  templates.py
app/tags/: __init__.py  repository.py
config/: ingestion.toml
docs/: agent-search.md  architecture.md  ingestion-artifacts.md
infra/: docker-compose.yml
infra/api/: Dockerfile
infra/ollama/: pull-model.sh
infra/opensearch/: Dockerfile  index.json
planning/: firmable-task-breakdown.json
tests/: test_agent_tools.py  test_company_model.py  test_csv_reader.py  test_identity.py  test_ingestion_config.py  test_normalizers.py  test_query_planner.py  test_search_agent.py  test_search_service.py  test_search_templates.py  test_seed.py  test_settings.py  test_staging.py  test_sync.py  test_tag_api.py  test_tags_model.py  test_tags_repository.py  test_validation_artifacts.py
tests/fixtures/: companies_edge_cases.csv  companies_sample.csv
tests/integration/: conftest.py  (+1 more)
web/: app.js  index.html
(+72 files in other folders)
