[project]
name = "firmable"
version = "0.1.0"
description = "Firmable search system for companies data"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=6.0",
    "fastapi>=0.136.1",
    "httpx>=0.27",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-ollama>=0.3",
    "opensearch-py>=2.7",
    "pyarrow>=14.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.14.0",
    "tavily-python>=0.3",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a live OpenSearch instance (skip with -m 'not integration')",
]
